--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/curriculos
-spring.datasource.username=postgres
-spring.datasource.password=loketa12
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 jwt.private.key=classpath:app.key
 jwt.public.key=classpath:app.pub
-api.security.token.secret=${JWT_SECRET:my-secret-key}
+api.security.token.secret=${JWT_SECRET}
