fix: correction get vagas verify candidate bool

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.datasource.password=${DATABASE_PASSWORD}
 jwt.private.key=classpath:app.key
 jwt.public.key=classpath:app.pub
 api.security.token.secret=${JWT_SECRET}
+
+#spring.datasource.url=jdbc:postgresql://localhost:5432/curriculos
+#spring.datasource.username=postgres
+#spring.datasource.password=loketa12
+#jwt.private.key=classpath:app.key
+#jwt.public.key=classpath:app.pub
+#api.security.token.secret=${JWT_SECRET:my-secret-key}
